--- a/src/main/resources/templates/preweb/index.html
+++ b/src/main/resources/templates/preweb/index.html
@@ -26,8 +26,8 @@
 		<div class="container-fluid padding-top-10">
 			<div class="row">
 				<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2">
-<!-- 					<div id="video" class="video"></div> -->
-					<div id="video" style="width: 860px; height: 500px;"></div>
+					<div id="video" class="video"></div>
+<!-- 					<div id="video" style="width: 860px; height: 500px;"></div> -->
 				</div>
 			</div>
 		</div>
