--- a/src/main/resources/templates/frontend/lists.html
+++ b/src/main/resources/templates/frontend/lists.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="common::commonHeader('影视')">
+<head th:replace="frontend/common::commonHeader('影视')">
     <meta charset="utf-8">
     <title>Title</title>
 </head>
 <body>
 <div class="container">
-    <div th:include="common::commonNav"></div>
+    <div th:include="frontend/common::commonNav"></div>
     <div class="panel panel-primary">
         <!-- Default panel contents -->
         <div class="panel-heading" th:text="影视列表">影视</div>
@@ -14,15 +14,15 @@
         <!-- Table -->
         <table class="table table-striped">
             <tbody>
-            <tr th:each="list : ${lists}">
-                <td><a th:text="${list.name}" th:href="${videos_url} + '?lid=' + ${list.id}">11</a></td>
+            <tr th:each="video : ${videoList}">
+                <td><a th:text="${video.id}" th:href="${videos_url} + '?lid=' + ${list.id}">11</a></td>
             </tr>
             </tbody>
         </table>
 
 
     </div>
-    <div th:include="common::commonFooter"></div>
+    <div th:include="frontend/common::commonFooter"></div>
 </div>
 
 </body>
