--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -2,8 +2,9 @@
 <html lang="zh-CN" xmlns:th="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="UTF-8">
-		<title th:text="${videosetname} + '-' + ${videoname}">ckplayer</title>
-		<script type="text/javascript" th:src="@{ckplayer/ckplayer/ckplayer.js}" charset="UTF-8"></script>
+		<title>ckplayer</title>
+		<script type="text/javascript" th:src="@{static/ckplayer/ckplayer/ckplayer.js}" charset="UTF-8"></script>
+	
 		<style type="text/css">
 			body {
 				margin: 0;
@@ -19,6 +20,8 @@
 		<div id="video" style="width: 600px; height: 400px;"></div>
 		<script th:inline="javascript">
 			var videoInfo = [[${videoInfo}]];
+			console.log(videoInfo)
+// 			console.log(${videoInfo.path})
 			var videoObject = {
 				//playerID:'ckplayer01',//播放器ID，第一个字符不能是数字，用来在使用多个播放器时监听到的函数将在所有参数最后添加一个参数用来获取播放器的内容
 				container: '#video', //容器的ID或className
@@ -75,8 +78,10 @@
 			    //    ['http://img.ksbbs.com/asset/Mon_1703/eb048d7839442d0.mp4', 'video/mp4', '英文高清', 10],
 			    //    ['http://img.ksbbs.com/asset/Mon_1703/d30e02a5626c066.mp4', 'video/mp4', '英文超清', 0]
 			    //]
+				
 				video: [
-					[videoInfo.path, videoInfo.type, videoInfo.version, videoInfo.priority]
+// 					['${videoInfo.path}', '${videoInfo.type}', '${videoInfo.version}', '${videoInfo.weight}']
+					['path=http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
 				]
 			};
 			var player = new ckplayer(videoObject);
