--- a/src/main/resources/templates/frontend/common.html
+++ b/src/main/resources/templates/frontend/common.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="${title}"></title>
-    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{static/bootstrap/css/bootstrap.min.css}">
+<!--     <link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.min.css" /> -->
 
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
@@ -29,9 +30,9 @@
 </div>
 <footer th:fragment="commonFooter">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script th:src="@{/bootstrap/js/jquery/jquery.min.js}"></script>
+    <script th:src="@{static/bootstrap/js/jquery/jquery.min.js}"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{static/bootstrap/js/bootstrap.min.js}"></script>
 </footer>
 </body>
 </html>
