--- a/src/main/resources/templates/frontend/common.html
+++ b/src/main/resources/templates/frontend/common.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/list">影视</a></li>
+                <li class="active"><a href="/getVideoList">影视</a></li>
                 <li><a href="#">导航二</a></li>
                 <li><a href="#">导航三</a></li>
                 <li><a href="#">导航四</a></li>
