--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -81,7 +81,7 @@
 				
 				video: [
 // 					['${videoInfo.path}', '${videoInfo.type}', '${videoInfo.version}', '${videoInfo.weight}']
-					['path=http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
+					['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
 				]
 			};
 			var player = new ckplayer(videoObject);
