--- a/src/main/resources/templates/frontend/videos.html
+++ b/src/main/resources/templates/frontend/videos.html
@@ -28,7 +28,7 @@
                         <a class="btn btn-default" th:text="${video.type}"></a>
                         <a class="btn btn-default" th:text="${video.version}"></a>
                         <a class="btn btn-default" th:text="${video.weight}"></a>
-                        <input type="hidden" name="path" th:value="${video}">
+                        <input type="hidden" name="id" th:value="${video.id}">
                         <button class="btn btn-link" th:text="${video.version}">11</button>
                     </form>
                 </td>
