--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -21,7 +21,7 @@
 		<script th:inline="javascript">
 			var videoInfo = [[${videoInfo}]];
 			console.log(videoInfo)
-// 			console.log(${videoInfo.path})
+			console.log(videoInfo.path)
 			var videoObject = {
 				//playerID:'ckplayer01',//播放器ID，第一个字符不能是数字，用来在使用多个播放器时监听到的函数将在所有参数最后添加一个参数用来获取播放器的内容
 				container: '#video', //容器的ID或className
@@ -80,8 +80,8 @@
 			    //]
 				
 				video: [
-// 					['${videoInfo.path}', '${videoInfo.type}', '${videoInfo.version}', '${videoInfo.weight}']
-					['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
+					[videoInfo.path, videoInfo.type, videoInfo.version, videoInfo.weight]
+// 					['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
 				]
 			};
 			var player = new ckplayer(videoObject);
