--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -28,7 +28,7 @@
 				variable: 'player', //播放函数名称
 				loaded: 'loadedHandler', //当播放器加载后执行的函数
 				loop: false, //播放结束是否循环播放
-				//autoplay: true, //是否自动播放
+				autoplay: true, //是否自动播放
 				//duration: 500, //设置视频总时间
 				// cktrack: '/ckplayer/material/srt.srt', //字幕文件
 				// poster: '/ckplayer/material/poster.jpg', //封面图片
