--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>ckplayer</title>
 		<script type="text/javascript" th:src="@{static/ckplayer/ckplayer/ckplayer.js}" charset="UTF-8"></script>
-	
+	 <link rel="stylesheet" th:href="@{static/bootstrap/css/bootstrap.min.css}">
 		<style type="text/css">
 			body {
 				margin: 0;
@@ -17,7 +17,27 @@
 	</head>
 
 	<body>
-		<div id="video" style="width: 600px; height: 400px;"></div>
+	<div class="container-fluid padding-top-10 padding-bottom-10">
+			<div class="row">
+				<div class="col-xs-12 col-sm-5 col-md-5 col-sm-offset-1 col-md-offset-1">
+					<img src="static/images/logo.png" id="logo"  style="height: 50px;margin:18px 110px"/>
+				</div>
+				<div class="col-xs-12 col-sm-5 col-md-5 text-right padding-top-10">
+					<h5>当前版本：V1.0（更新时间：2018-12-18）</h5>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid padding-top-10">
+			<div class="row">
+				<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2">
+					<div id="video" class="video"></div>
+				</div>
+			</div>
+		</div>
+<!-- 					<fr id="video" class="video"></div> -->
+<!-- 					<div id="video" style="width: 100%; height: 100%;scrolling:no"></div> -->
+		
+		
 		<script th:inline="javascript">
 			var videoInfo = [[${videoInfo}]];
 			console.log(videoInfo)
@@ -28,14 +48,14 @@
 				variable: 'player', //播放函数名称
 				loaded: 'loadedHandler', //当播放器加载后执行的函数
 				loop: false, //播放结束是否循环播放
-				autoplay: true, //是否自动播放
+// 				autoplay: true, //是否自动播放
 				//duration: 500, //设置视频总时间
-				// cktrack: '/ckplayer/material/srt.srt', //字幕文件
-				// poster: '/ckplayer/material/poster.jpg', //封面图片
-				// preview: { //预览图片
-				// 	file: ['/ckplayer/material/mydream_en1800_1010_01.png', '/ckplayer/material/mydream_en1800_1010_02.png'],
-				// 	scale: 2
-				// },
+				cktrack: 'static/ckplayer/material/srt.srt', //字幕文件
+				poster: 'static/ckplayer/material/poster.jpg', //封面图片
+				preview: { //预览图片
+					file: ['static/ckplayer/material/mydream_en1800_1010_01.png', 'static/ckplayer/material/mydream_en1800_1010_02.png'],
+					scale: 2
+				},
 				config: '', //指定配置函数
 				debug: true, //是否开启调试模式
 				//flashplayer: true, //强制使用flashplayer
@@ -330,7 +350,7 @@
 					list: [ //list=定义元素列表
 						{
 							type: 'png', //定义元素类型：只有二种类型，image=使用图片，text=文本
-							file: '/ckplayer/material/logo.png', //图片地址
+							file: 'static/ckplayer/material/logo.png', //图片地址
 							radius: 30, //图片圆角弧度
 							width: 30, //定义图片宽，必需要定义
 							height: 30, //定义图片高，必需要定义
@@ -389,7 +409,7 @@
 				var danmuObj = {
 					list: [{
 						type: 'image', //定义元素类型：只有二种类型，image=使用图片，text=文本
-						file: '/ckplayer/material/logo.png', //图片地址
+						file: 'static/ckplayer/material/logo.png', //图片地址
 						radius: 30, //图片圆角弧度
 						width: 30, //定义图片宽，必需要定义
 						height: 30, //定义图片高，必需要定义
