--- a/src/main/resources/templates/frontend/videos.html
+++ b/src/main/resources/templates/frontend/videos.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="frontend/common::commonHeader('影视')">
     <meta charset="utf-8" />
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>影视</title>
 </head>
 <body>
 <div class="container">
