--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN" xmlns:th="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="UTF-8">
-		<title>ckplayer</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>影视</title>
 		<script type="text/javascript" th:src="@{static/ckplayer/ckplayer/ckplayer.js}" charset="UTF-8"></script>
 	 <link rel="stylesheet" th:href="@{static/bootstrap/css/bootstrap.min.css}">
 		<style type="text/css">
@@ -17,25 +18,28 @@
 	</head>
 
 	<body>
-	<div class="container-fluid padding-top-10 padding-bottom-10">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5 col-md-5 col-sm-offset-1 col-md-offset-1">
-					<img src="static/images/logo.png" id="logo"  style="height: 50px;margin:18px 110px"/>
-				</div>
-				<div class="col-xs-12 col-sm-5 col-md-5 text-right padding-top-10">
-					<h5>当前版本：V1.0（更新时间：2018-12-18）</h5>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid padding-top-10">
-			<div class="row">
-				<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2">
-					<div id="video" class="video"></div>
-				</div>
-			</div>
-		</div>
-<!-- 					<fr id="video" class="video"></div> -->
-<!-- 					<div id="video" style="width: 100%; height: 100%;scrolling:no"></div> -->
+	<div class="container">
+	<div th:include="frontend/common::commonNav"></div>
+	
+<!-- 	<div class="container-fluid padding-top-10 padding-bottom-10"> -->
+<!-- 			<div class="row"> -->
+<!-- 				<div class="col-xs-12 col-sm-5 col-md-5 col-sm-offset-1 col-md-offset-1"> -->
+<!-- 					<img src="static/images/logo.png" id="logo"  style="height: 50px;margin:18px 110px"/> -->
+<!-- 				</div> -->
+<!-- 				<div class="col-xs-12 col-sm-5 col-md-5 text-right padding-top-10"> -->
+<!-- 					<h5>当前版本：V1.0（更新时间：2018-12-18）</h5> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
+<!-- 		</div> -->
+<!-- 		<div class="container-fluid padding-top-10"> -->
+<!-- 			<div class="row"> -->
+<!-- 				<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2"> -->
+<!-- 					<div id="video" class="video"></div> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
+<!-- 		</div> -->
+<!-- 视频组件 -->
+		<div id="video" style="width: 100%; height: 500px;scrolling:no"></div>
 		
 		
 		<script th:inline="javascript">
@@ -480,5 +484,7 @@
 			}
 			var zoom = 1;
 		</script>
+		<div th:include="frontend/common::commonFooter"></div>
+		</div>
 	</body>
 </html>
