--- a/src/main/resources/templates/frontend/common.html
+++ b/src/main/resources/templates/frontend/common.html
@@ -24,6 +24,20 @@
                 <li><a href="#">导航二</a></li>
                 <li><a href="#">导航三</a></li>
                 <li><a href="#">导航四</a></li>
+                <li style="margin-top: 8px;margin-left: 470px;">
+               		<form class="form-inline" action="/" method="post">
+						  <div class="form-group">
+<!-- 						    <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label> -->
+						    <div class="input-group">
+						      <div class="input-group-addon">颓废书生</div>
+						      <input type="text" class="form-control" id="exampleInputAmount" placeholder="大圣归来、金刚狼">
+<!-- 						      <div class="input-group-addon">.00</div> -->
+						    </div>
+						  </div>
+						  <button type="submit" class="btn btn-primary">搜索</button>
+					</form>
+				</li>
+                
             </ul>
         </div>
     </nav>
