--- a/src/main/resources/templates/frontend/ckplayer.html
+++ b/src/main/resources/templates/frontend/ckplayer.html
@@ -103,11 +103,11 @@
 			    //    ['http://img.ksbbs.com/asset/Mon_1703/d30e02a5626c066.mp4', 'video/mp4', '英文超清', 0]
 			    //]
 // 				video: 'http://new.jsyunbf.com/20180301/Oloe1I0A/index.m3u8'
-				video: 'https://cdn.letv-cdn.com/2018/12/20/tSX61RO0avqeAPfd/playlist.m3u8'
-// 				video: [
-// 					[videoInfo.videoUrl, videoInfo.videoPattern, videoInfo.videoClarity, videoInfo.videoWeight]
-// // 					['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
-// 				]
+// 				video: 'https://cdn.letv-cdn.com/2018/12/20/tSX61RO0avqeAPfd/playlist.m3u8'
+				video: [
+					[videoInfo.videoUrl, videoInfo.videoPattern, videoInfo.videoClarity, videoInfo.videoWeight]
+// 					['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', '0']
+				]
 			};
 			var player = new ckplayer(videoObject);
 			function loadedHandler() {
