--- a/src/main/resources/templates/backend/login.html
+++ b/src/main/resources/templates/backend/login.html
@@ -34,15 +34,14 @@
             </div>
             <h3>欢迎使用 hAdmin</h3>
 
-            <form class="m-t" role="form" action="/demoIndex">
+            <form class="m-t" role="form" action="/admin/adminIndex" method="post">
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="用户名" required="">
+                    <input type="email" class="form-control" name="username" placeholder="用户名" required="">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="密码" required="">
+                    <input type="password" class="form-control" name="password" placeholder="密码" required="">
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
-
 
                 <p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>
                 </p>
