--- a/src/main/resources/templates/backend/login.html
+++ b/src/main/resources/templates/backend/login.html
@@ -34,7 +34,7 @@
             </div>
             <h3>欢迎使用 hAdmin</h3>
 
-            <form class="m-t" role="form" action="/admin/adminIndex" method="post">
+            <form class="m-t" role="form" action="/admin/index" method="post">
                 <div class="form-group">
                     <input type="email" class="form-control" name="username" placeholder="用户名" required="">
                 </div>
