--- a/src/main/resources/templates/backend/index.html
+++ b/src/main/resources/templates/backend/index.html
@@ -271,8 +271,9 @@
                     </ul>
                 </nav>
             </div>
+<!--             加载右侧home -->
             <div class="row J_mainContent" id="content-main">
-                <iframe id="J_iframe" width="100%" height="100%" src="index_v1.html?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
+                <iframe id="J_iframe" width="100%" height="100%" src="/admin/home" frameborder="0" data-id="index_v1.html" seamless></iframe>
             </div>
         </div>
         <!--右侧部分结束-->
