--- a/src/main/resources/templates/backend/home.html
+++ b/src/main/resources/templates/backend/home.html
@@ -28,7 +28,7 @@
                 <div class="ibox">
                     <div class="ibox-content">
                         <h5>视频数量</h5>
-                        <h1 class="no-margins"  th:text="${videoSum}">0</h1>
+                        <h1 class="no-margins"  th:text="${videoSum}">886,200</h1>
                         <div class="stat-percent font-bold text-navy">98% <i class="fa fa-bolt"></i></div>
                         <small>总收入</small>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="ibox">
                     <div class="ibox-content">
                         <h5>管理员数量</h5>
-                        <h1 class="no-margins">1 738,200</h1>
+                        <h1 class="no-margins" th:text="${adminSum}">1 738,200</h1>
                         <div class="stat-percent font-bold text-navy">98% <i class="fa fa-bolt"></i></div>
                         <small>总收入</small>
                     </div>
