--- a/src/main/resources/templates/backend/home.html
+++ b/src/main/resources/templates/backend/home.html
@@ -30,7 +30,7 @@
                         <h5>视频数量</h5>
                         <h1 class="no-margins"  th:text="${videoSum}">886,200</h1>
                         <div class="stat-percent font-bold text-navy">98% <i class="fa fa-bolt"></i></div>
-                        <small>总收入</small>
+                        <small>部</small>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                         <h5>管理员数量</h5>
                         <h1 class="no-margins" th:text="${adminSum}">1 738,200</h1>
                         <div class="stat-percent font-bold text-navy">98% <i class="fa fa-bolt"></i></div>
-                        <small>总收入</small>
+                        <small>位</small>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         <h5>用户数量</h5>
                         <h1 class="no-margins">-200,100</h1>
                         <div class="stat-percent font-bold text-danger">12% <i class="fa fa-level-down"></i></div>
-                        <small>总收入</small>
+                        <small>位</small>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                         <h5>其他数量</h5>
                         <h1 class="no-margins">54,200</h1>
                         <div class="stat-percent font-bold text-danger">24% <i class="fa fa-level-down"></i></div>
-                        <small>总收入</small>
+                        <small>个</small>
                     </div>
                 </div>
             </div>
