--- a/src/main/resources/templates/backend/login.html
+++ b/src/main/resources/templates/backend/login.html
@@ -29,10 +29,10 @@
         <div>
             <div>
 
-                <h1 class="logo-name">h</h1>
+                <h1 class="logo-name">T</h1>
 
             </div>
-            <h3>欢迎使用 hAdmin</h3>
+            <h3>欢迎使用 视频后台管理系统</h3>
 
             <form class="m-t" role="form" action="/admin/index" method="post">
                 <div class="form-group">
