--- a/src/main/resources/templates/backend/index.html
+++ b/src/main/resources/templates/backend/index.html
@@ -64,7 +64,7 @@
                                 <a class="J_menuItem" href="/admin/videoList">视频列表</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="graph_flot.html">Flot</a>
+                                <a class="J_menuItem" href="graph_flot.html">待开发</a>
                             </li>
                         </ul>
                     </li>
