--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -90,7 +90,7 @@
 										<div class="btn-group">
 			                                <button data-toggle="dropdown" class="btn btn-primary btn-xs dropdown-toggle">操作 <span class="caret"></span> </button>
 			                                <ul class="dropdown-menu">
-			                                    <li><a data-toggle="modal" data-video="${video.videoUrl}" data-target="#myModal6">详情</a> </li>
+			                                    <li><a data-toggle="modal" data-target="#myModal6">详情</a> </li>
 			                                    <li><a href="buttons.html#" class="font-bold">修改</a> </li>
 			                                    <li class="divider"></li>
 			                                    <li><a href="buttons.html#">删除</a></li>
