--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -30,6 +30,7 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
                         <h5>视频列表 <small>分类，查找</small></h5>
+                        
                         <div class="ibox-tools">
                             <a class="collapse-link">
                                 <i class="fa fa-chevron-up"></i>
@@ -38,10 +39,8 @@
                                 <i class="fa fa-wrench"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-user">
-                                <li><a href="table_data_tables.html#">选项1</a>
-                                </li>
-                                <li><a href="table_data_tables.html#">选项2</a>
-                                </li>
+                                <li><a href="table_data_tables.html#">选项1</a></li>
+                                <li><a href="table_data_tables.html#">选项2</a></li>
                             </ul>
                             <a class="close-link">
                                 <i class="fa fa-times"></i>
@@ -51,6 +50,9 @@
                     <div class="ibox-content">
 
                         <table class="table table-striped table-bordered table-hover dataTables-example">
+<!--                         <div class="text-center"> -->
+                            <button type="button"  class="btn btn-primary" data-toggle="modal" data-target="#myModal">添加 </button>
+<!--                         </div> -->
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -127,7 +129,38 @@
             </div>
         </div>
     </div>
-<div class="modal inmodal fade" id="myModal6" tabindex="-1" role="dialog"  aria-hidden="true">
+
+	<form action="/admin/addVideo" method="post">
+	
+			<div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+	            <div class="modal-dialog">
+	                <div class="modal-content animated bounceInRight">
+	                    <div class="modal-header">
+	                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">关闭</span>
+	                        </button>
+	                        <i class="fa fa-laptop modal-icon"></i>
+	                        <h4 class="modal-title">媒体添加</h4>
+	                        <small class="font-bold">这里可以显示副标题。
+	                    </div>
+	                    <div class="modal-body">
+	<!--                         <p><strong>H+</strong> 是一个完全响应式，基于Bootstrap3.3.6最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术，她提供了诸多的强大的可以重新组合的UI组件，并集成了最新的jQuery版本(v2.1.1)，当然，也集成了很多功能强大，用途广泛的jQuery插件，她可以用于所有的Web应用程序，如网站管理后台，网站会员中心，CMS，CRM，OA等等，当然，您也可以对她进行深度定制，以做出更强系统。</p> -->
+	                                <div class="form-group"><label>名称</label> <input type="text" name="videoName"  placeholder="请输入媒体名称" class="form-control"></div>
+	                                <div class="form-group"><label>URL</label> <input type="text" name="videoUrl"  placeholder="请输入媒体URL" class="form-control"></div>
+	                                <div class="form-group"><label>格式</label> <input type="text" name="videoPattern"  placeholder="请输入媒体格式" class="form-control"></div>
+	                                <div class="form-group"><label>标签</label> <input type="text" name="videoLabel"  placeholder="请输入媒体标签" class="form-control"></div>
+	                                <div class="form-group"><label>介绍</label> <input type="text" name="videoInfo"  placeholder="请输入媒体介绍" class="form-control"></div>
+	                                <div class="form-group"><label>权重</label> <input type="text" name="videoWeight"  placeholder="请输入媒体权重" class="form-control"></div>
+	                    </div>
+	                    <div class="modal-footer">
+	                        <button type="button" class="btn btn-white" data-dismiss="modal">取消</button>
+	                        <button type="submit" class="btn btn-primary">保存</button>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>    
+	</form>
+
+		<div class="modal inmodal fade" id="myModal6" tabindex="-1" role="dialog"  aria-hidden="true">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
