--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -146,7 +146,14 @@
 	<!--                         <p><strong>H+</strong> 是一个完全响应式，基于Bootstrap3.3.6最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术，她提供了诸多的强大的可以重新组合的UI组件，并集成了最新的jQuery版本(v2.1.1)，当然，也集成了很多功能强大，用途广泛的jQuery插件，她可以用于所有的Web应用程序，如网站管理后台，网站会员中心，CMS，CRM，OA等等，当然，您也可以对她进行深度定制，以做出更强系统。</p> -->
 	                                <div class="form-group"><label>名称</label> <input type="text" name="videoName"  placeholder="请输入媒体名称" class="form-control"></div>
 	                                <div class="form-group"><label>URL</label> <input type="text" name="videoUrl"  placeholder="请输入媒体URL" class="form-control"></div>
-	                                <div class="form-group"><label>格式</label> <input type="text" name="videoPattern"  placeholder="请输入媒体格式" class="form-control"></div>
+<!-- 	                                <div class="form-group"><label>格式</label> <input type="text" name="videoPattern"  placeholder="请输入媒体格式" class="form-control"></div> -->
+	                                <div class="form-group"><label>格式</label> 
+	                                	<select name="videoPattern" class="form-control">
+										            <option value="">请选择媒体格式</option>  
+										            <option>video/mp4</option>  
+										            <option>video/m3u8</option>  
+										</select>
+	                                </div>
 	                                <div class="form-group"><label>标签</label> <input type="text" name="videoLabel"  placeholder="请输入媒体标签" class="form-control"></div>
 	                                <div class="form-group"><label>介绍</label> <input type="text" name="videoInfo"  placeholder="请输入媒体介绍" class="form-control"></div>
 	                                <div class="form-group"><label>权重</label> <input type="text" name="videoWeight"  placeholder="请输入媒体权重" class="form-control"></div>
