--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -55,7 +55,7 @@
                             <button type="button"  class="btn btn-primary" data-toggle="modal" data-target="#myModal">添加 </button>
 <!--                         </div> -->
                             <thead>
-                                <tr>
+                                <tr style="background-color: RGB(114,102,186);color: white;">
                                     <th>ID</th>
                                     <th>名称</th>
                                     <th>缩略图</th>
@@ -70,7 +70,7 @@
 <!--                                     <th>评论次数</th> -->
 <!--                                     <th>收藏次数</th> -->
 <!--                                     <th>支持次数</th> -->
-									<th>操作</th>
+									<th style="width: 165px;">操作</th>
                                 </tr>
                             </thead>
                             
