update width of border

--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -60,11 +60,11 @@
                                     <th>名称</th>
                                     <th style="width: 50px;">缩略图</th>
 <!--                                     <th>URL</th> -->
-                                    <th>格式</th>
+                                    <th style="width: 50px;">格式</th>
                                     <th>标签</th>
 <!--                                     <th>介绍</th> -->
-                                    <th>清晰度</th>
-                                    <th>权重</th>
+                                    <th style="width: 55px;">清晰度</th>
+                                    <th style="width: 38px;">权重</th>
                                     <th style="width: 135px;">更新时间</th>
 <!--                                     <th>播放次数</th> -->
 <!--                                     <th>评论次数</th> -->
