--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -63,7 +63,8 @@
                                     <th style="width: 50px;">格式</th>
                                     <th>标签</th>
 <!--                                     <th>介绍</th> -->
-                                    <th style="width: 55px;">清晰度</th>
+<!--                                     <th style="width: 55px;">清晰度</th> -->
+                                    <th>清晰度</th>
                                     <th style="width: 38px;">权重</th>
                                     <th style="width: 135px;">更新时间</th>
 <!--                                     <th>播放次数</th> -->
