--- a/src/main/resources/templates/backend/videolist.html
+++ b/src/main/resources/templates/backend/videolist.html
@@ -61,7 +61,7 @@
                                     <th style="width: 50px;">缩略图</th>
 <!--                                     <th>URL</th> -->
                                     <th style="width: 50px;">格式</th>
-                                    <th>标签</th>
+<!--                                     <th>标签</th> -->
 <!--                                     <th>介绍</th> -->
 <!--                                     <th style="width: 55px;">清晰度</th> -->
                                     <th>清晰度</th>
@@ -82,7 +82,7 @@
                                     <td ><img th:src="${video.videoThumbnail}" style="width: 40px;height: 50px;"></td>
 <!--                                     <td class="center" th:text="${video.videoUrl}">-</td> -->
                                     <td class="center" th:text="${video.videoPattern}">-</td>
-                                    <td class="center" th:text="${video.videoLabel}">-</td>
+<!--                                     <td class="center" th:text="${video.videoLabel}">-</td> -->
 <!--                                     <td class="center" th:text="${video.videoInfo}">-</td> -->
                                     <td class="center" th:text="${video.videoClarity}">-</td>
                                     <td class="center" th:text="${video.videoWeight}">-</td>
@@ -119,7 +119,7 @@
                                     <th>缩略图</th>
 <!--                                     <th>URL</th> -->
                                     <th>格式</th>
-                                    <th>标签</th>
+<!--                                     <th>标签</th> -->
 <!--                                     <th>介绍</th> -->
                                     <th>清晰度</th>
                                     <th>权重</th>
